--- a/Final_viz_and_dashboard/readme
+++ b/Final_viz_and_dashboard/readme
@@ -1,1 +1,21 @@
+## For the purpose of final vizualizations and dashboard  Tableau, Google Slides, and Powerpoint were used
 
+## Top 7 most affected countries
+
+https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/Top7mostaffectedcountries?publish=yes
+
+## Is Population a determinant of Covid-19?
+https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/IsPopulationadeterminantofCovid-19?publish=yes
+
+## Is HDI a determinant of Covid-19?
+https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/IsHDIadeterminantofCovid-19?publish=yes
+
+## Is GDP PC a determinant of Covid-19?
+https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/IsGDPPCadeterminantofCovid-19?publish=yes
+
+## Total Deaths - Map
+https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/TotalDeathsMap?publish=yes
+
+
+## Covid-19 and impact on global economy
+https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/Covid-19andimpactonglobaleconomy?publish=yes
