--- a/Final_viz_and_dashboard-Faraz/readme
+++ b/Final_viz_and_dashboard-Faraz/readme
@@ -19,3 +19,22 @@ https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobal
 
 ## Covid-19 and impact on global economy
 https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobaleconomy/Covid-19andimpactonglobaleconomy?publish=yes
+
+###
+![](Images/Screenshot%20(305).png)
+
+
+###
+![](Images/Screenshot%20(306).png)
+
+
+###
+![](Images/Screenshot%20(307).png)
+
+
+###
+![](Images/Screenshot%20(308).png)
+
+
+###
+![](Images/Screenshot%20(309).png)
