--- a/Final_viz_and_dashboard-Faraz/readme
+++ b/Final_viz_and_dashboard-Faraz/readme
@@ -38,3 +38,7 @@ https://public.tableau.com/app/profile/ahmed.faraz/viz/Covid-19andimpactonglobal
 
 ###
 ![](Images/Screenshot%20(309).png)
+
+
+###
+![](Images/1.png
